plugins {
    id 'java-library'
}

java {
    modularity.inferModulePath = true
    sourceCompatibility = JavaVersion.VERSION_15
    targetCompatibility = JavaVersion.VERSION_15

}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

group 'org.monospark.remix'
version '0.1'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation project(':sample')
    testCompile group: 'junit', name: 'junit', version: '4.12'
}

task generateJavadocs(type: Javadoc) {
    source = sourceSets.main.allJava
    options {
        addBooleanOption('-enable-preview', true)
        addStringOption('-release', '15')
    }
}